# code-sloth-new

./: .clinerules  .env.example  .gitignore  Project_Structure.txt  chat_with_code.py  example_llm_usage.py  example_model.py  example_usage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
media/: main.js  style.css
pydantic_agent/: __init__.py  base.py  chat_interface.py  completion_agent.py  config.py  llm_agent.py  llm_integration.py  logging_config.py
src/: chatView.ts  extension.ts  python_server.py  version.ts
